--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ cargo-expand = "1.0.110"
 num-traits = "0.2.19"
 
 [dev-dependencies]
+ndarray = "0.16.1"
+ndarray-npy = "0.9.1"
 csv = "1.2"
 criterion = "0.5"
 image = "0.25.6"
